# opengl-glfw-template

./: CMakeLists.txt  README.md  run
src/: CMakeLists.txt  main.cpp
src/window/: CMakeLists.txt  lib.cpp  lib.hpp
